[package]
name = "kademlia"
version = "0.1.0"
authors = ["jerryh00 <60069563+jerryh00@users.noreply.github.com>"]

default-run = "node"

[lib]
name = "kademlia"
path = "src/lib/mod.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
nix = ""
rand = ""
timer = ""
chrono = ""
derivative = ""
serde_json = ""
serde = { version = "1.0", features = ["derive"] }
log = ""
env_logger = ""
sha2 = ""
clap = ""
circular-queue = ""
config = ""
